add page class page

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,10 +31,10 @@
         <text x="38" y="114" font-size="12" font-weight="bold" fill="white">DATA SCIENCE</text>
     </g></svg>
     <nav>
-        <a href="./">INTRO</a>
-        <a href="./classes">CLASSES</a>
-        <a href="./apps">APPLICATIONS</a>
-        <a href="./examples">EXAMPLES</a>
+        <a href="/classes">INTRO</a>
+        <a href="/classes/classes/">CLASSES</a>
+        <a href="/classes/apps/">APPLICATIONS</a>
+        <a href="/classes/examples/">EXAMPLES</a>
     </nav>
     </header>
     <main id="content" class="main-content" role="main">
