--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,9 +13,57 @@
         h1, h2 {font-family: Unna;color: #0000aa; font-size:3rem; font-weight:normal;}
         header {display:flex;}
         nav {align-self:center;}
-        a {text-decoration:none; color:black;}
-        a:hover {text-decoration:underline; font-weight:bold;}
-        nav>a {padding:1em; font-size:1.2rem;}
+ul {
+  background: white;
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+li {
+  color: #fff;
+  background: white;
+  display: block;
+  float: left;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
+  transition-duration: 0.5s;
+}
+  
+li a {
+  color: black;
+}
+
+li:hover {
+  background: lightgray;
+  cursor: pointer;
+}
+
+ul li ul {
+  background: white;
+  visibility: hidden;
+  opacity: 0;
+  min-width: 5rem;
+  position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+  left: 0;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+
+ul li ul li {
+  clear: both;
+  width: 100%;
+}
+
     </style>
 </head>
 <body>
