--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -78,11 +78,19 @@ ul li ul li {
         <text x="11" y="72" font-family="Unna" font-size="24" font-weight="bold" fill="white">Project.</text>
         <text x="38" y="114" font-size="12" font-weight="bold" fill="white">DATA SCIENCE</text>
     </g></svg>
-    <nav>
-        <a href="/classes">INTRO</a>
-        <a href="/classes/classes/">CLASSES</a>
-        <a href="/classes/apps/">APPLICATIONS</a>
-        <a href="/classes/examples/">EXAMPLES</a>
+    <nav><ul>
+	    <li><a href="/classes">INTRO</a></li>
+	    <li><a href="/classes/classes/">CLASSES</a>
+		<ul class="dropdown">
+        		<li><a href="/classes/classes/page">Page</a></li>
+        		<li><a href="/classes/classes/filter">Filter</a></li>
+        		<li><a href="/classes/classes/form">Form</a></li>
+	      		<li><a href="/classes/classes/table">Table</a></li>
+	      		<li><a href="/classes/classes/chart">Chart</a></li>
+		    </ul>
+	    </li>
+        <li><a href="/classes/apps/">APPLICATIONS</a>
+        <li><a href="/classes/examples/">EXAMPLES</a>
     </nav>
     </header>
     <main id="content" class="main-content" role="main">
