--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,6 +13,8 @@
         h1, h2 {font-family: Unna;color: #0000aa; font-size:3rem; font-weight:normal;}
         header {display:flex;}
         nav {align-self:center;}
+	    a {text-decoration:none;}
+
 nav ul {
   background: white;
   list-style: none;
@@ -33,7 +35,7 @@ nav ul li {
 }
   
 nav ul li a {
-  color: black;
+  color: black; font-size:1rem;
 }
 
 nav ul li:hover {
