--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -73,7 +73,7 @@ nav ul li ul li {
 </head>
 <body>
     <header>
-    <svg class="vanish" height="125" width="125">
+    <a href=https://thpglobal.github.io><svg class="vanish" height="125" width="125">
 	<g>
         <rect x="0" y="0" height="100" width="100" fill="#0000aa"></rect>
         <rect x="30" y="100" height="20" width="90" fill="coral"></rect>
@@ -82,7 +82,7 @@ nav ul li ul li {
 	    <text x="11" y="50" font-family="Unna" font-size="24" font-weight="bold" fill="white">Hunger</text>
         <text x="11" y="72" font-family="Unna" font-size="24" font-weight="bold" fill="white">Project.</text>
         <text x="38" y="114" font-size="12" font-weight="bold" fill="white">DATA SCIENCE</text>
-    </g></svg>
+	    </g></svg></a>
     <nav><ul>
 	    <li><a href="/classes">INTRO</a></li>
 	    <li><a href="/classes/classes/">CLASSES▼</a>
