--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,6 +4,7 @@
 <head>
     <title>THP Classes Doc</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name = "Description" content = "Documentation for classes by John Coonrod.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
     <style>
