--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -74,7 +74,7 @@ nav ul li ul li {
 </head>
 <body>
     <header>
-    <a href=https://thpglobal.github.io><svg class="vanish" height="125" width="125">
+    <a href=https://thpglobal.github.io><svg class="vanish" height="125" width="125" aria-labelledby="THP Data Science Home Page">
 	<g>
         <rect x="0" y="0" height="100" width="100" fill="#0000aa"></rect>
         <rect x="30" y="100" height="20" width="90" fill="coral"></rect>
