--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,83 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name = "Description" content = "Documentation for classes by John Coonrod.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
-    <style>
-        body {padding:1em; background-color:white;
-        	max-width: 1000px; margin: 0 auto;
-            font-family:"Source Sans Pro"; font-size:1.4rem;}
-        h1, h2 {font-family: Unna;color: #0000aa; font-size:3rem; font-weight:normal;}
-        header {display:flex;}
-        nav {align-self:center;}
-	    a {text-decoration:none;}
-
-nav ul {
-  background: white;
-  list-style: none;
-  color: black;
-  margin: 0;
-  padding-left: 0;
-}
-
-nav ul li {
-  color: #black;
-  background: white;
-  display: block;
-  float: left;
-  padding: 1rem;
-  position: relative;
-  text-decoration: none;
-  transition-duration: 0.5s;
-}
-  
-nav ul li a {
-  color: black; font-size:1rem;
-}
-
-nav ul li:hover {
-  background: lightgray;
-  cursor: pointer;
-}
-
-nav ul li ul {
-  background: white;
-  visibility: hidden;
-  border: solid 1px black;
-  opacity: 0;
-  min-width: 5rem;
-  position: absolute;
-  transition: all 0.5s ease;
-  margin-top: 1rem;
-  left: 0;
-  display: none;
-  z-index:100
-}
-
-nav ul li:hover > ul,
-nav ul li ul:hover {
-  visibility: visible;
-  opacity: 1;
-  display: block;
-}
-
-nav ul li ul li {
-  clear: both;
-  width: 100%;
-}
-
-    </style>
+	
+    
 </head>
 <body>
     <header>
-    <a href=https://thpglobal.github.io><svg class="vanish" height="125" width="125" aria-labelledby="THP Data Science Home Page">
-	<g>
-        <rect x="0" y="0" height="100" width="100" fill="#0000aa"></rect>
-        <rect x="30" y="100" height="20" width="90" fill="coral"></rect>
-        <rect x="100" y="20" height="90" width="20" fill="coral"></rect>
-	    <text x="11" y="28" font-family="Unna" font-size="24" font-weight="bold" fill="white">The</text>
-	    <text x="11" y="50" font-family="Unna" font-size="24" font-weight="bold" fill="white">Hunger</text>
-        <text x="11" y="72" font-family="Unna" font-size="24" font-weight="bold" fill="white">Project.</text>
-        <text x="38" y="114" font-size="12" font-weight="bold" fill="white">DATA SCIENCE</text>
-	    </g></svg></a>
+    <a href=https://thpglobal.github.io><img src=./assets/logo.svg alt="THP Data Science Home Page" width=125></a>
     <nav><ul>
 	    <li><a href="/classes">INTRO</a></li>
 	    <li><a href="/classes/classes/">CLASSES▼</a>
