--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,8 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name = "Description" content = "Documentation for classes by John Coonrod.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
-	
-    
+	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
