--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,12 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name = "Description" content = "Documentation for classes by John Coonrod.">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
+    	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
-    <a href=https://thpglobal.github.io><img src=./assets/logo.svg alt="THP Data Science Home Page" width=125></a>
+    <a href=https://thpglobal.github.io><img src="./assets/logo.svg" alt="THP Data Science Home Page" width=125></a>
     <nav><ul>
 	    <li><a href="/classes">INTRO</a></li>
 	    <li><a href="/classes/classes/">CLASSES▼</a>
