--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,8 +24,8 @@
 
 		    </ul>
 	    </li>
-	    <li><a href="/classes/apps/">APPLICATIONS"</a></li>
-        <li><a href="/classes/examples/">EXAMPLES▼"/a>
+	    <li><a href="/classes/apps/">APPLICATIONS</a></li>
+        <li><a href="/classes/examples/">EXAMPLES▼"</a>
 		<ul> class="dropdown">
 			<li><a href="/classes/examples/authentication">Authentication</a></li>
         		<li><a href="/classes/classes/filter">Routing</a></li>
