--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,11 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name = "Description" content = "Documentation for classes by John Coonrod.">
     	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-    <a href=https://thpglobal.github.io><img src="logo.svg" alt="THP Data Science Home Page" width=125></a>
+    <a href=https://thpglobal.github.io><img src="/logo.svg" alt="THP Data Science Home Page" width=125></a>
     <nav><ul>
 	    <li><a href="/classes">INTRO</a></li>
 	    <li><a href="/classes/classes/">CLASSES▼</a>
@@ -25,7 +25,7 @@
 		    </ul>
 	    </li>
 	    <li><a href="/classes/apps/">APPLICATIONS</a></li>
-        <li><a href="/classes/examples/">EXAMPLES▼"</a>
+        <li><a href="/classes/examples/">EXAMPLES▼</a>
 		<ul> class="dropdown">
 			<li><a href="/classes/examples/authentication">Authentication</a></li>
         		<li><a href="/classes/classes/filter">Routing</a></li>
