--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,8 +8,9 @@
 	<meta name = "Description" content = "Documentation for classes by John Coonrod.">
     	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unna|Source+Sans+Pro">
 	<style>
-        body {padding:1em; background-color:white; max-width: 1000px; margin: 0 auto; font-family:"Source Sans Pro"; font-size:1.4rem;}
+        body {padding:1em; background-color:white; max-width: 1000px; margin: 0 auto; font-family:"Source Sans Pro";}
         h1, h2 {font-family: Unna;color: #0000aa; font-size:3rem; font-weight:normal;}
+	p, li {font-size:1.25rem; line-height:1.4;}
         header {display:flex;}
         nav {align-self:center;}
 	a {text-decoration:none;}
